@@ -139,21 +139,17 @@ public class GuildStatisticsCommand extends Command {
 		}
 
 		List<String> slayerLb = guildMemberPlayersList
-			.stream()
-			.sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "slayer")))
-			.collect(Collectors.toList());
+                .stream()
+                .sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "slayer"))).toList();
 		List<String> skillsLb = guildMemberPlayersList
-			.stream()
-			.sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "skills")))
-			.collect(Collectors.toList());
+                .stream()
+                .sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "skills"))).toList();
 		List<String> cataLb = guildMemberPlayersList
-			.stream()
-			.sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "catacombs")))
-			.collect(Collectors.toList());
+                .stream()
+                .sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "catacombs"))).toList();
 		List<String> weightLb = guildMemberPlayersList
-			.stream()
-			.sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "weight")))
-			.collect(Collectors.toList());
+                .stream()
+                .sorted(Comparator.comparingDouble(m -> -getDoubleFromCache(m, "weight"))).toList();
 
 		double averageSlayer = slayerLb.stream().mapToDouble(m -> getDoubleFromCache(m, "slayer")).sum() / slayerLb.size();
 		double averageSkills = skillsLb.stream().mapToDouble(m -> getDoubleFromCache(m, "skills")).sum() / skillsLb.size();
