@@ -62,10 +62,9 @@ public class JacobCommand extends Command {
 		for (JacobContest contest : crop.equals("All")
 			? data.getContests()
 			: data
-				.getContests()
-				.stream()
-				.filter(c -> c.getCrops().stream().anyMatch(thisCrop -> thisCrop.equals(finalCrop)))
-				.collect(Collectors.toList())) {
+                .getContests()
+                .stream()
+                .filter(c -> c.getCrops().stream().anyMatch(thisCrop -> thisCrop.equals(finalCrop))).toList()) {
 			extras.addEmbedField(
 				"Contest",
 				"**In:** <t:" + contest.getTimeInstant().getEpochSecond() + ":R>\n**Crops:**\n" + contest.getCropsFormatted(false),
