@@ -50,10 +50,9 @@ public class CoinsPerBitCommand extends Command {
 		}
 		EmbedBuilder eb = defaultEmbed("Coins Per Bit");
 		for (Map.Entry<String, Double> entry : values
-			.entrySet()
-			.stream()
-			.sorted(Comparator.comparingDouble(v -> -v.getValue()))
-			.collect(Collectors.toList())) {
+                .entrySet()
+                .stream()
+                .sorted(Comparator.comparingDouble(v -> -v.getValue())).toList()) {
 			eb.appendDescription(getEmoji(entry.getKey()) + " " + idToName(entry.getKey()) + " ➜ " + formatNumber(entry.getValue()) + "\n");
 		}
 		return eb;
