@@ -61,11 +61,10 @@ public class ForgeCommand extends Command {
 				bonus = 0.7;
 			}
 			for (JsonElement forgeItem : forgeItems
-				.getAsJsonObject()
-				.entrySet()
-				.stream()
-				.map(Map.Entry::getValue)
-				.collect(Collectors.toList())) {
+					.getAsJsonObject()
+					.entrySet()
+					.stream()
+					.map(Map.Entry::getValue).toList()) {
 				String itemId = higherDepth(forgeItem, "id").getAsString();
 				itemId = itemId.equals("PET") ? "AMMONITE;4" : itemId;
 				eb.addField(
